--- a/api/package.json
+++ b/api/package.json
@@ -4,14 +4,12 @@
    "description": "",
    "main": "index.js",
    "scripts": {
-      "dev": "tsc && nodemon ./dist"
+      "dev": "nodemon"
    },
    "keywords": [],
    "author": "",
    "license": "ISC",
    "dependencies": {
-      "@types/cors": "^2.8.13",
-      "@types/node": "^18.11.18",
       "bcrypt": "^5.1.0",
       "body-parser": "^1.20.1",
       "cors": "^2.8.5",
@@ -27,6 +25,10 @@
    },
    "devDependencies": {
       "@tsconfig/node16": "^1.0.3",
-      "@types/express": "^4.17.15"
+      "@types/bcrypt": "^5.0.0",
+      "@types/cors": "^2.8.13",
+      "@types/express": "^4.17.15",
+      "@types/jsonwebtoken": "^9.0.1",
+      "@types/node": "^18.11.18"
    }
 }
