--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
       "axios": "^1.2.3",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
-      "react-hook-form": "^7.42.1",
+      "react-hot-toast": "^2.4.0",
       "react-redux": "^8.0.5",
       "react-router-dom": "^6.7.0"
    },
