--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
    "dependencies": {
       "@lottiefiles/react-lottie-player": "^3.5.0",
       "@reduxjs/toolkit": "^1.9.1",
+      "@types/react-helmet": "^6.1.6",
       "axios": "^1.2.3",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
+      "react-helmet": "^6.1.0",
       "react-hot-toast": "^2.4.0",
       "react-redux": "^8.0.5",
       "react-router-dom": "^6.7.0"
