--- a/api/package.json
+++ b/api/package.json
@@ -2,7 +2,6 @@
    "name": "api",
    "version": "1.0.0",
    "description": "",
-   "main": "index.js",
    "scripts": {
       "dev": "nodemon"
    },
@@ -20,6 +19,7 @@
       "jsonwebtoken": "^9.0.0",
       "mongoose": "^6.8.4",
       "multer": "^1.4.5-lts.1",
+      "openai": "^3.1.0",
       "ts-node": "^10.9.1",
       "typescript": "^4.9.4"
    },
