--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
       "@types/cors": "^2.8.13",
       "@types/express": "^4.17.15",
       "@types/jsonwebtoken": "^9.0.1",
+      "@types/multer": "^1.4.7",
       "@types/node": "^18.11.18"
    }
 }
